* Corrected the issue of file uploads being encoding incorrectly. * Switch Base64 encoding to MiGBase64 for speed, licensing and integration reasons.